--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "sqlite3": "^4.0.8"
   }
